[tool.poetry]
name = "requestd"
version = "0.1.2"
description = "Simple aiohttp server for request debugging"
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6"
cchardet = "^2.1"
aiodns = "^2.0"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
